--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="linecolor">#DAD8D8</color>
+    <color name="btnBackground">#FFF</color>
+    <color name="btnBackground2">#FF9800</color>
+
+
 </resources>
