--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Calculator" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Calculator" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -10,7 +10,26 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/white</item>
+<!--        <item name="android:windowLightStatusBar">true</item>-->
+
         <!-- Customize your theme here. -->
     </style>
+
+
+
+<!--    <style name="commonbutton" parent="Widget.MaterialComponents.ExtendedFloatingActionButton">-->
+<!--        <item name="android:background">@color/white</item>-->
+<!--        <item name="app:cornerRadius">36dp</item>-->
+<!--    </style>-->
+
+<!--    <style name="digitbutton" parent="commonbutton">-->
+<!--        <item name="background">@color/white</item>-->
+<!--        <item name="android:textColor">@color/black</item>-->
+<!--    </style>-->
+
+<!--    <style name="opratorbutton" parent="commonbutton">-->
+<!--        <item name="android:textColor">@color/btnBackground</item>-->
+<!--    </style>-->
+
 </resources>
